# duke3d-build2

./: .gitignore  E1L1m.map  README.md  build2.txt  cage2.map  doortest.map  e1l1A.map  evaldraw.txt  imgui.ini  mapinfo.txt  mapsimp.kc  maptest.kc  maptest_duke.kc  onespr.MAP  sector tests.map
.github/workflows/: autorelease.yml  main.yml
EvalScripts/: MapUtils.c  quat.kc  readme.md
EvalScripts/KenSamples/: RScript.htm  evaldraw.txt  net.bat
EvalScripts/KenSamples/demos/: beer.kc  ceilflor.kc  clippy.kc  colacow.kc  conetest.kc  dragcards.kc  driftbox.kc  drumkit.kc  explode.kc  genmaze.kc  glearth.kc  glow.kc  gltorus.kc  glwavy.kc  goldball2.kc  groufst2b.kc  interference.kc  lab3d.kc  lathetool.kc  machinima1.kc  machinima2.kc  machinima3.kc  magfield.kc  magsword.kc  minsurf.kc  mount.kc  nasa.kc  particles.kc  planpos.kc  playnote_test.kc  plussing.kc  poolballs.kc  poolballs2.kc  raymaze_3.kc  roadway.kc  saltpour.kc  sprite2d.kc  steamy.kc  stereo_test.kc  stopwatch.kc  (+3 more)
EvalScripts/KenSamples/games/: arm.kc  backgammon.kc  box.kc  breakout.kc  bubbles.kc  caciobro.kc  cubes5.kc  dsnake3d.kc  kenken.kc  magpong.kc  magpong2.kc  maze3d.kc  megaminx.kc  pacman2.kc  pyraminx.kc  rummiken.kc  set.kc  snood.kc  stratego.kc  tictactoe.kc  traffic.kc
EvalScripts/KenSamples/games/asteroids/: asteroids.kc
EvalScripts/KenSamples/geeky/: alpher.kc  ang2vec.kc  blocksc1.kc  bounce3d.kc  buf_speed_tests.kc  calend.kc  circtris.kc  drawall4dof.kc  drawcone2d.kc  echomap2.kc  edroad.kc  fft.kc  gcd.kc  glsettex.kc  gltest.kc  grouray2.kc  hull3d.kc  lens2.kc  linefit2.kc  mandel.kc  morse.kc  netsync.kc  persp2.kc  pi.kc  polyproto.kc  raycast_101.kc  remez8.kc  rigidline.kc  rscr_strings.kc  sampfilt.kc  setview.kc  slide.kc  slide_square.kc  sorttest.kc  space_struct.kc  span_v2h.kc  speech.kc  speedkv6.kc  speedpol.kc  touchtst.kc  (+2 more)
EvalScripts/KenSamples/insts/: blowup.kc  fminst.kc  frqshift.kc  inst3.kc  inst4.kc  perlin.kc  rndmusic.kc  sawmow2.kc  sawmow3.kc
EvalScripts/KenSamples/voxes/: barrel.kc  checker.kc  column.kc  die.kc  dodec.kc  door.kc  doubcube.kc  genboxwiz.kc  genbrick.kc  genglobe.kc  gensword.kc  meatball.kc  meathead.kc  pacman.kc  pawn.kc  pipes.kc  potplant.kc  rope.kc  tiefight.kc
EvalScripts/tolbjoren/2d_drawing/: floodfill.kc
EvalScripts/tolbjoren/3d_drawing/: drawarrow3d.kc
EvalScripts/tolbjoren/color_toolbox/: ryb_circle.kc
EvalScripts/tolbjoren/computerconcepts/: colrowmajor2.kc
EvalScripts/tolbjoren/demoscene/: cube_to_sphere.kc  pipes.kc
EvalScripts/tolbjoren/fractals/: hilbert_curve_nolsystem.kc  hilbert_curve_stack.kc  lorenzattractor.kc
EvalScripts/tolbjoren/games/: tetris_start.kc
EvalScripts/tolbjoren/hershey_fonts/: hershey_3d_extrude.kc
EvalScripts/tolbjoren/math/: align_to_vector.kc  reflection_law.kc  torbs_mathlib.kc
EvalScripts/tolbjoren/misc/: raytrace2.kc  raytrace3_controls.kc
EvalScripts/tolbjoren/physics/: rk4_integrator.kc
EvalScripts/tolbjoren/voxel/: barth_decic.kc  csg_garbled.kc  cube_normal_colors.kc  heart.kc  ico_sphere.kc  noise_kule.kc  rounded_cube.kc  uv_sphere.kc
EvalScripts/tolbjoren/water/: funkysinewater_lars.kc  wave_eq_3d.kc
Maps/: LIG.map  prt3.map  readme.md
RayLua/: ARCHITECTURE_NOTES.md  BUILD_LINUX.md  CMakeLists.txt  CmakePresets.json  DumbCore.hpp  DumbEdit.hpp  DumbRender.hpp  FileWatcher.h  MonoTest.hpp  README_LINUX_VERSION  RUN_CONTEXT.md  RUN_RAYGAME.txt  b2rlmath.h  cmakelists.txt  duke_target.cmake  light.fs  luabinder.hpp  luajit.cmake  main.c  main.cpp  raygame.cmake  readme.md  renderhelper.h  script.lua  shared.cmake  uv_vis_shader.fs
RayLua/Core/: artloader.c  artloader.h  btruntime.h  buildmath.h  kplib.c  kplib.h  loaders.c  loaders.h  mapcore.c  mapcore.h  mapform_b2.h  mapform_duke.h  mapserial.c  mapserial.h  monoclip.c  monoclip.h  monodebug.c  monodebug.h  physics.c  physics.h  rendertypes.h  scenerender.c  scenerender.h  sectmask.h  shadowtest-opus.txt  shadowtest2.c  shadowtest2.h
RayLua/Debug/: Bin
RayLua/DukeGame/: regex-replacers.txt
RayLua/DukeGame/source/: ACTORS.C  BUILD.C  BUILD.H  CACHE1D.H  CMakeLists.txt  CONFIG.C  CONFIG.H  Cache1d.c  DUKE3D.H  ENGINE.H  FUNCT.H  GAME.C  GAMEDEF.C  GAME_NOSYS.C  GAME_TEXT.c  KDMENG.C  KEYBOARD.H  MATHUTIL.H  MMULTI.H  PLAYER.C  PRAGMAS.H  PREMAP.C  SOUNDS.C  TASK_MAN.H  _functio.h  actors.c  build.c  build.h  cache1d.c  cache1d.h  config.c  config.h  control.c  control.h  duke3d.h  dukewrap.c  dukewrap.h  engine.c  engine.h  file_lib.h  (+33 more)
RayLua/Editor/: ieditorhudview.h  trap.shader  trapscript.cs  uimodels.h
RayLua/Modules/VocAudio/: CMakeLists.txt
RayLua/Modules/VocAudio/include/: voc_audio.h  voc_decoder.h
RayLua/Modules/VocAudio/src/: test_voc.c  voc_audio.c  voc_decoder.c
RayLua/Shaders/: atest.frag  light.frag  light.vert  lightmul.frag  lut.frag  skyparallax.frag  uv_opaq.frag  uv_opaq.vert
RayLua/build-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  imgui.ini
RayLua/build-debug/Shaders/: skyparallax.vert
RayLua/interfaces/: engineapi.c  engineapi.h  ev_projection.h  event_types.h  eventstore.c  eventstore.h  shared_types.h
RayLua/luajit/: cmakelists.txt
build2vs/: CMakeSettings.json  CmakePresets.json  Sysmain.h  build2.c  build2.cfg  build2.h  cmakelists.txt  drawcone.c  drawkv6.c  drawpoly.c  drawpoly.h  loaders.h  mapcore.c  mapcore.h  morph.c  scenerender.c  scenerender.h  shadowtest2.c  shadowtest2.h  simple.c  softrender.c  softrender.h  winmain.cpp
build2vs/Core/: artloader.c  artloader.h  kplib.c  kplib.h  loaders.c  loaders.h  mapcore.c  mapcore.h  monoclip.c  monoclip.h  physics.c  physics.h
build2vs/docs/: monotonic.md
models/: candle.kv6  key.kv6  kmedkit.kv6  lightbulb.kv6
src/: build2.c  build2_sectorfix.c  drawcone.c  drawkv6.c  drawpoly.c  morph.c  readme.md  simple.c  winmain.cpp
utils/: readme.md  unpackgrp.py
utils/PalGen/: gen.py  genr.py
utils/coding/: format  gen.bat  hextract.py  serialgen.py
utils/slab6-mirror-master/: README.md  duke.kv6  duke.kvx
(+29 files in other folders)
